[package]
description = "Created with Anchor"
edition = "2018"
name = "game-pool"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "game_pool"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.17.0"
